--- a/Draw Tic Tac Toe/Base.lproj/Main.storyboard
+++ b/Draw Tic Tac Toe/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
+        <development version="7000" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -24,57 +25,56 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please draw the board to start the game" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OUX-sh-Vac">
-                                        <rect key="frame" x="0.0" y="24" width="600" height="21"/>
+                                        <rect key="frame" x="0.0" y="25" width="600" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o1a-fp-Hq3">
-                                        <rect key="frame" x="8" y="44" width="76" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="76" id="JgV-oo-JxK"/>
-                                        </constraints>
-                                        <attributedString key="attributedText">
-                                            <fragment content="X: 0">
-                                                <attributes>
-                                                    <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <font key="NSFont" size="16" name="ArialRoundedMTBold"/>
-                                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                                </attributes>
-                                            </fragment>
-                                        </attributedString>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ukp-fq-YDG">
-                                        <rect key="frame" x="510" y="46" width="82" height="21"/>
+                                        <rect key="frame" x="510" y="41" width="82" height="21"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="82" id="sTu-pQ-6Zf"/>
+                                            <constraint firstAttribute="width" constant="82" id="ejg-fB-rff"/>
                                         </constraints>
                                         <attributedString key="attributedText">
                                             <fragment content="O: 0">
                                                 <attributes>
                                                     <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <font key="NSFont" size="16" name="ArialRoundedMTBold"/>
+                                                    <font key="NSFont" size="16" name="HelveticaNeue-Thin"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="right" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
                                         </attributedString>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o1a-fp-Hq3">
+                                        <rect key="frame" x="8" y="41" width="76" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="76" id="Y5p-3v-9KA"/>
+                                            <constraint firstAttribute="height" constant="21" id="h1w-1q-kq9"/>
+                                        </constraints>
+                                        <attributedString key="attributedText">
+                                            <fragment content="X: 0">
+                                                <attributes>
+                                                    <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <font key="NSFont" size="16" name="HelveticaNeue-Thin"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.31008376597147913" green="0.31008376597147913" blue="0.31008376597147913" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="OUX-sh-Vac" firstAttribute="leading" secondItem="Wip-vH-dfp" secondAttribute="leading" id="1Mi-W5-hjl"/>
-                                    <constraint firstItem="Ukp-fq-YDG" firstAttribute="top" secondItem="OUX-sh-Vac" secondAttribute="bottom" constant="1" id="31b-8Y-Wg7"/>
-                                    <constraint firstAttribute="bottom" secondItem="Ukp-fq-YDG" secondAttribute="bottom" constant="3" id="C72-j5-hrr"/>
-                                    <constraint firstItem="Ukp-fq-YDG" firstAttribute="trailing" secondItem="Wip-vH-dfp" secondAttribute="trailingMargin" id="LLp-mu-Bnv"/>
-                                    <constraint firstItem="o1a-fp-Hq3" firstAttribute="baseline" secondItem="Ukp-fq-YDG" secondAttribute="firstBaseline" id="NRm-0l-Ivr"/>
-                                    <constraint firstItem="o1a-fp-Hq3" firstAttribute="leading" secondItem="Wip-vH-dfp" secondAttribute="leadingMargin" id="Zeo-u1-qSW"/>
+                                    <constraint firstItem="o1a-fp-Hq3" firstAttribute="baseline" secondItem="Ukp-fq-YDG" secondAttribute="baseline" id="NZ3-SF-4xz"/>
+                                    <constraint firstItem="o1a-fp-Hq3" firstAttribute="leading" secondItem="Wip-vH-dfp" secondAttribute="leadingMargin" id="Pww-VL-0T4"/>
+                                    <constraint firstItem="Ukp-fq-YDG" firstAttribute="trailing" secondItem="Wip-vH-dfp" secondAttribute="trailingMargin" id="chN-9A-cJT"/>
+                                    <constraint firstItem="o1a-fp-Hq3" firstAttribute="bottom" secondItem="Wip-vH-dfp" secondAttribute="bottomMargin" id="grs-8k-3nx"/>
                                     <constraint firstAttribute="trailing" secondItem="OUX-sh-Vac" secondAttribute="trailing" id="lpm-0v-Fp5"/>
+                                    <constraint firstItem="o1a-fp-Hq3" firstAttribute="top" secondItem="Wip-vH-dfp" secondAttribute="top" constant="41" id="nd2-Bf-qzx"/>
                                     <constraint firstItem="OUX-sh-Vac" firstAttribute="centerY" secondItem="Wip-vH-dfp" secondAttribute="centerY" id="pHL-eM-Tth"/>
-                                    <constraint firstItem="Ukp-fq-YDG" firstAttribute="top" secondItem="Wip-vH-dfp" secondAttribute="top" constant="46" id="tgF-ik-xko"/>
-                                    <constraint firstItem="o1a-fp-Hq3" firstAttribute="top" secondItem="Wip-vH-dfp" secondAttribute="top" constant="44" id="wLk-My-o4x"/>
-                                    <constraint firstAttribute="bottom" secondItem="o1a-fp-Hq3" secondAttribute="bottom" constant="5" id="wjQ-hX-9rX"/>
+                                    <constraint firstItem="o1a-fp-Hq3" firstAttribute="firstBaseline" secondItem="Ukp-fq-YDG" secondAttribute="firstBaseline" id="umI-dr-KW2"/>
                                 </constraints>
                             </view>
                             <visualEffectView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u22-J3-Xba">
@@ -88,20 +88,21 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="48" id="ZPl-v2-WMW"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="40"/>
+                                            <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="O: 0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZm-hK-GqO">
                                             <rect key="frame" x="510" y="565" width="82" height="21"/>
-                                            <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
+                                            <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f8C-G3-CdC">
                                             <rect key="frame" x="95" y="557" width="410" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                             <state key="normal" title="Clear Score">
-                                                <color key="titleColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="titleColor" red="0.40781933069229126" green="0.40781933069229126" blue="0.40781933069229126" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <connections>
                                                 <action selector="clearScoreButton:" destination="8bC-Xf-vdC" eventType="touchUpInside" id="uCh-Ne-i2c"/>
@@ -113,19 +114,19 @@
                                                 <constraint firstAttribute="height" constant="21" id="829-9Q-Itu"/>
                                                 <constraint firstAttribute="width" constant="76" id="SJ6-ke-liE"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
+                                            <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sMh-7d-0vE">
-                                            <rect key="frame" x="243" y="285" width="115" height="30"/>
+                                            <rect key="frame" x="242" y="285" width="115" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="115" id="OG5-1U-FPe"/>
                                                 <constraint firstAttribute="height" constant="30" id="hl7-7i-uL0"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <state key="normal" title="Play again">
-                                                <color key="titleColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="titleColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                             </state>
                                             <connections>
                                                 <action selector="playAgainButton:" destination="8bC-Xf-vdC" eventType="touchUpInside" id="lVw-VR-Y34"/>
@@ -173,7 +174,7 @@
                                 <color key="value" red="0.15739924629999999" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="color" keyPath="currentShapeColor">
-                                <color key="value" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="value" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="color" keyPath="winLineColor">
                                 <color key="value" red="1" green="0.96954255710000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
